fixed overflow issue

--- a/server/public/css/style.css
+++ b/server/public/css/style.css
@@ -4449,14 +4449,13 @@ div#charts {
 div#advertiser_filters, div#publisher_filters {
   margin-left: 10px;
   width: 338px; }
-  div#advertiser_filters.expand, div#publisher_filters.expand {
-    width: 686px; }
   div#advertiser_filters button.show span.hide, div#advertiser_filters button.hide span.show, div#publisher_filters button.show span.hide, div#publisher_filters button.hide span.show {
     display: none; }
   div#advertiser_filters table#advertiser, div#advertiser_filters table#publisher, div#publisher_filters table#advertiser, div#publisher_filters table#publisher {
     font-size: 12px;
     margin: 5px 0;
-    width: 100%; }
+    max-width: 338px;
+    width: 100% !important; }
     div#advertiser_filters table#advertiser thead tr th, div#advertiser_filters table#publisher thead tr th, div#publisher_filters table#advertiser thead tr th, div#publisher_filters table#publisher thead tr th {
       padding: 2px; }
       div#advertiser_filters table#advertiser thead tr th.stat.orderable, div#advertiser_filters table#publisher thead tr th.stat.orderable, div#publisher_filters table#advertiser thead tr th.stat.orderable, div#publisher_filters table#publisher thead tr th.stat.orderable {
@@ -4494,6 +4493,10 @@ div#advertiser_filters, div#publisher_filters {
             color: green; }
           div#advertiser_filters table#advertiser tbody tr td.delta.negative, div#advertiser_filters table#publisher tbody tr td.delta.negative, div#publisher_filters table#advertiser tbody tr td.delta.negative, div#publisher_filters table#publisher tbody tr td.delta.negative {
             color: red; }
+  div#advertiser_filters.expand, div#publisher_filters.expand {
+    width: 686px; }
+    div#advertiser_filters.expand table#advertiser, div#advertiser_filters.expand table#publisher, div#publisher_filters.expand table#advertiser, div#publisher_filters.expand table#publisher {
+      max-width: 686px; }
 
 /* Dashboard */
 #dashboard-stats {
